syntax = "proto3";

package substreams.v1.program;

message Data {
    repeated InitializeCandidate initialize_candidate_list = 1;
    repeated InitializePoll initialize_poll_list = 2;
    repeated Vote vote_list = 3;
}

message InitializeCandidate {
      string candidate_name = 1;
      uint64 _poll_id = 2;
}

message InitializePoll {
      uint64 poll_id = 1;
      string description = 2;
      uint64 poll_start = 3;
      uint64 poll_end = 4;
}

message Vote {
      string _candidate_name = 1;
      uint64 _poll_id = 2;
}
    message Candidate {
          string candidate_name = 1;
          uint64 candidate_votes = 2;
    }
    message Poll {
          uint64 poll_id = 1;
          string description = 2;
          uint64 poll_start = 3;
          uint64 poll_end = 4;
          uint64 candidate_amount = 5;
    }